// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`key login button is pressed key login is called 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
          onSubmitEditing={[Function focusPassword]}
          placeholder=\\"Email\\"
          placeholderTextColor=\\"white\\"
          returnKeyType=\\"next\\"
          testID=\\"emailInput\\"
-         value=\\"\\"
+         value=\\"klas&jflk@lkjasdf.com\\"
        />
      </View>
      <View
        style={
          Object {
@@ -130,11 +130,11 @@
          placeholder=\\"Password\\"
          placeholderTextColor=\\"white\\"
          returnKeyType=\\"done\\"
          secureTextEntry={true}
          testID=\\"passwordInput\\"
-         value=\\"\\"
+         value=\\"this&is=unsafe\\"
        />
        <Button
          buttonTextStyle={
            Object {
              \\"color\\": \\"#3CC8E6\\",
@@ -158,136 +158,44 @@
          text=\\"Forgot Password?\\"
          type=\\"transparent\\"
        />
      </View>
    </Flex>
-   <View
-     forwardedRef={[Function ref]}
-     onLayout={[Function anonymous]}
-     pointerEvents=\\"box-none\\"
-     style={
-       Object {
-         \\"alignItems\\": \\"center\\",
-         \\"flex\\": 1,
-         \\"justifyContent\\": \\"center\\",
-         \\"marginHorizontal\\": 38,
-         \\"paddingBottom\\": 0,
-         \\"paddingLeft\\": 0,
-         \\"paddingRight\\": 0,
-         \\"paddingTop\\": 20,
-       }
-     }
+   <Flex
+     align=\\"stretch\\"
+     justify=\\"end\\"
    >
-     <View
+     <RCTSafeAreaView
+       emulateUnlessSupported={true}
        style={
          Object {
-           \\"width\\": \\"100%\\",
+           \\"bottom\\": 20,
+           \\"left\\": 50,
+           \\"position\\": \\"absolute\\",
          }
        }
      >
        <Button
-         onPress={[Function onPress]}
-         style={
+         buttonTextStyle={
            Array [
-             Object {
-               \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 24,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 50,
-               \\"justifyContent\\": \\"flex-start\\",
-               \\"margin\\": 4,
-               \\"width\\": \\"100%\\",
-             },
-             Object {
-               \\"backgroundColor\\": \\"white\\",
-               \\"borderColor\\": undefined,
-               \\"borderWidth\\": undefined,
-             },
+             undefined,
            ]
          }
-         testID=\\"socialAuthButton\\"
-       >
-         <View
-           style={
-             Object {
-               \\"width\\": 70,
-             }
-           }
-         >
-           <SvgMock />
-         </View>
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"black\\",
-               },
-             ]
-           }
-         >
-           Sign in with Google
-         </Text>
-       </Button>
-       <Button
-         onPress={[Function onPress]}
+         onPress={[Function handlePress]}
+         pill={true}
          style={
            Array [
              Object {
                \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 24,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 50,
-               \\"justifyContent\\": \\"flex-start\\",
-               \\"margin\\": 4,
-               \\"width\\": \\"100%\\",
+               \\"height\\": 48,
+               \\"width\\": 650,
              },
-             Object {
-               \\"backgroundColor\\": \\"#3B5998\\",
-               \\"borderColor\\": undefined,
-               \\"borderWidth\\": undefined,
-             },
+             undefined,
            ]
          }
-         testID=\\"socialAuthButton\\"
-       >
-         <View
-           style={
-             Object {
-               \\"width\\": 70,
-             }
-           }
-         >
-           <SvgMock />
-         </View>
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"white\\",
-               },
-             ]
-           }
-         >
-           Sign in with Facebook
-         </Text>
-       </Button>
-     </View>
-   </View>
+         testID=\\"bottomButton\\"
+         text=\\"LOGIN\\"
+         type=\\"secondary\\"
+       />
+     </RCTSafeAreaView>
+   </Flex>
  </View>"
`;

exports[`key login button is pressed mfa_required is returned from the Key should send user to MFA screen and clear credentials 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
          onSubmitEditing={[Function focusPassword]}
          placeholder=\\"Email\\"
          placeholderTextColor=\\"white\\"
          returnKeyType=\\"next\\"
          testID=\\"emailInput\\"
-         value=\\"\\"
+         value=\\"klas&jflk@lkjasdf.com\\"
        />
      </View>
      <View
        style={
          Object {
@@ -158,136 +158,44 @@
          text=\\"Forgot Password?\\"
          type=\\"transparent\\"
        />
      </View>
    </Flex>
-   <View
-     forwardedRef={[Function ref]}
-     onLayout={[Function anonymous]}
-     pointerEvents=\\"box-none\\"
-     style={
-       Object {
-         \\"alignItems\\": \\"center\\",
-         \\"flex\\": 1,
-         \\"justifyContent\\": \\"center\\",
-         \\"marginHorizontal\\": 38,
-         \\"paddingBottom\\": 0,
-         \\"paddingLeft\\": 0,
-         \\"paddingRight\\": 0,
-         \\"paddingTop\\": 20,
-       }
-     }
+   <Flex
+     align=\\"stretch\\"
+     justify=\\"end\\"
    >
-     <View
+     <RCTSafeAreaView
+       emulateUnlessSupported={true}
        style={
          Object {
-           \\"width\\": \\"100%\\",
+           \\"bottom\\": 20,
+           \\"left\\": 50,
+           \\"position\\": \\"absolute\\",
          }
        }
      >
        <Button
-         onPress={[Function onPress]}
-         style={
+         buttonTextStyle={
            Array [
-             Object {
-               \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 24,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 50,
-               \\"justifyContent\\": \\"flex-start\\",
-               \\"margin\\": 4,
-               \\"width\\": \\"100%\\",
-             },
-             Object {
-               \\"backgroundColor\\": \\"white\\",
-               \\"borderColor\\": undefined,
-               \\"borderWidth\\": undefined,
-             },
+             undefined,
            ]
          }
-         testID=\\"socialAuthButton\\"
-       >
-         <View
-           style={
-             Object {
-               \\"width\\": 70,
-             }
-           }
-         >
-           <SvgMock />
-         </View>
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"black\\",
-               },
-             ]
-           }
-         >
-           Sign in with Google
-         </Text>
-       </Button>
-       <Button
-         onPress={[Function onPress]}
+         onPress={[Function handlePress]}
+         pill={true}
          style={
            Array [
              Object {
                \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 24,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 50,
-               \\"justifyContent\\": \\"flex-start\\",
-               \\"margin\\": 4,
-               \\"width\\": \\"100%\\",
-             },
-             Object {
-               \\"backgroundColor\\": \\"#3B5998\\",
-               \\"borderColor\\": undefined,
-               \\"borderWidth\\": undefined,
-             },
-           ]
-         }
-         testID=\\"socialAuthButton\\"
-       >
-         <View
-           style={
-             Object {
-               \\"width\\": 70,
-             }
-           }
-         >
-           <SvgMock />
-         </View>
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"white\\",
+               \\"height\\": 48,
+               \\"width\\": 650,
              },
+             undefined,
            ]
          }
-         >
-           Sign in with Facebook
-         </Text>
-       </Button>
-     </View>
-   </View>
+         testID=\\"bottomButton\\"
+         text=\\"LOGIN\\"
+         type=\\"secondary\\"
+       />
+     </RCTSafeAreaView>
+   </Flex>
  </View>"
`;

exports[`key login button is pressed should not call next when an auth error is thrown 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
          onSubmitEditing={[Function focusPassword]}
          placeholder=\\"Email\\"
          placeholderTextColor=\\"white\\"
          returnKeyType=\\"next\\"
          testID=\\"emailInput\\"
-         value=\\"\\"
+         value=\\"klas&jflk@lkjasdf.com\\"
        />
      </View>
      <View
        style={
          Object {
@@ -130,11 +130,11 @@
          placeholder=\\"Password\\"
          placeholderTextColor=\\"white\\"
          returnKeyType=\\"done\\"
          secureTextEntry={true}
          testID=\\"passwordInput\\"
-         value=\\"\\"
+         value=\\"this&is=unsafe\\"
        />
        <Button
          buttonTextStyle={
            Object {
              \\"color\\": \\"#3CC8E6\\",
@@ -158,136 +158,44 @@
          text=\\"Forgot Password?\\"
          type=\\"transparent\\"
        />
      </View>
    </Flex>
-   <View
-     forwardedRef={[Function ref]}
-     onLayout={[Function anonymous]}
-     pointerEvents=\\"box-none\\"
-     style={
-       Object {
-         \\"alignItems\\": \\"center\\",
-         \\"flex\\": 1,
-         \\"justifyContent\\": \\"center\\",
-         \\"marginHorizontal\\": 38,
-         \\"paddingBottom\\": 0,
-         \\"paddingLeft\\": 0,
-         \\"paddingRight\\": 0,
-         \\"paddingTop\\": 20,
-       }
-     }
+   <Flex
+     align=\\"stretch\\"
+     justify=\\"end\\"
    >
-     <View
+     <RCTSafeAreaView
+       emulateUnlessSupported={true}
        style={
          Object {
-           \\"width\\": \\"100%\\",
+           \\"bottom\\": 20,
+           \\"left\\": 50,
+           \\"position\\": \\"absolute\\",
          }
        }
      >
        <Button
-         onPress={[Function onPress]}
-         style={
+         buttonTextStyle={
            Array [
-             Object {
-               \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 24,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 50,
-               \\"justifyContent\\": \\"flex-start\\",
-               \\"margin\\": 4,
-               \\"width\\": \\"100%\\",
-             },
-             Object {
-               \\"backgroundColor\\": \\"white\\",
-               \\"borderColor\\": undefined,
-               \\"borderWidth\\": undefined,
-             },
+             undefined,
            ]
          }
-         testID=\\"socialAuthButton\\"
-       >
-         <View
-           style={
-             Object {
-               \\"width\\": 70,
-             }
-           }
-         >
-           <SvgMock />
-         </View>
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"black\\",
-               },
-             ]
-           }
-         >
-           Sign in with Google
-         </Text>
-       </Button>
-       <Button
-         onPress={[Function onPress]}
+         onPress={[Function handlePress]}
+         pill={true}
          style={
            Array [
              Object {
                \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 24,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 50,
-               \\"justifyContent\\": \\"flex-start\\",
-               \\"margin\\": 4,
-               \\"width\\": \\"100%\\",
+               \\"height\\": 48,
+               \\"width\\": 650,
              },
-             Object {
-               \\"backgroundColor\\": \\"#3B5998\\",
-               \\"borderColor\\": undefined,
-               \\"borderWidth\\": undefined,
-             },
+             undefined,
            ]
          }
-         testID=\\"socialAuthButton\\"
-       >
-         <View
-           style={
-             Object {
-               \\"width\\": 70,
-             }
-           }
-         >
-           <SvgMock />
-         </View>
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"white\\",
-               },
-             ]
-           }
-         >
-           Sign in with Facebook
-         </Text>
-       </Button>
-     </View>
-   </View>
+         testID=\\"bottomButton\\"
+         text=\\"LOGIN\\"
+         type=\\"secondary\\"
+       />
+     </RCTSafeAreaView>
+   </Flex>
  </View>"
`;

exports[`keyboard listeners should hide sign in logo when the keyboard is shown 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,31 +43,10 @@
    </View>
    <Header
      left={<DeprecatedBackButton />}
    />
    <Flex
-     align=\\"center\\"
-     justify=\\"center\\"
-   >
-     <Text
-       style={
-         Object {
-           \\"color\\": \\"#3CC8E6\\",
-           \\"fontFamily\\": \\"AmaticSC-Bold\\",
-           \\"fontSize\\": 48,
-           \\"fontStyle\\": \\"normal\\",
-           \\"letterSpacing\\": 2,
-           \\"lineHeight\\": 48,
-           \\"textAlignVertical\\": \\"center\\",
-           \\"textTransform\\": \\"lowercase\\",
-         }
-       }
-     >
-       Sign In
-     </Text>
-   </Flex>
-   <Flex
      style={
        Object {
          \\"paddingHorizontal\\": 30,
          \\"paddingVertical\\": 10,
        }"
`;

exports[`keyboard listeners should show sign in logo when the keyboard is hidden 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,10 +43,31 @@
    </View>
    <Header
      left={<DeprecatedBackButton />}
    />
    <Flex
+     align=\\"center\\"
+     justify=\\"center\\"
+   >
+     <Text
+       style={
+         Object {
+           \\"color\\": \\"#3CC8E6\\",
+           \\"fontFamily\\": \\"AmaticSC-Bold\\",
+           \\"fontSize\\": 48,
+           \\"fontStyle\\": \\"normal\\",
+           \\"letterSpacing\\": 2,
+           \\"lineHeight\\": 48,
+           \\"textAlignVertical\\": \\"center\\",
+           \\"textTransform\\": \\"lowercase\\",
+         }
+       }
+     >
+       Sign In
+     </Text>
+   </Flex>
+   <Flex
      style={
        Object {
          \\"paddingHorizontal\\": 30,
          \\"paddingVertical\\": 10,
        }"
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <View
    forwardedRef={[Function]}
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FF5532",
        "height": 68,
        "justifyContent": "center",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      There was a problem signing in.
    </Text>
  </View>
  <Header
    left={<DeprecatedBackButton />}
  />
  <Flex
    align="center"
    justify="center"
  >
    <Text
      style={
        Object {
          "color": "#3CC8E6",
          "fontFamily": "AmaticSC-Bold",
          "fontSize": 48,
          "fontStyle": "normal",
          "letterSpacing": 2,
          "lineHeight": 48,
          "textAlignVertical": "center",
          "textTransform": "lowercase",
        }
      }
    >
      Sign In
    </Text>
  </Flex>
  <Flex
    style={
      Object {
        "paddingHorizontal": 30,
        "paddingVertical": 10,
      }
    }
    value={2}
  >
    <View>
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Email
      </Text>
      <Input
        autoCapitalize="none"
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="white"
        returnKeyType="next"
        testID="emailInput"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Password
      </Text>
      <Input
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="white"
        returnKeyType="done"
        secureTextEntry={true}
        testID="passwordInput"
        value=""
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "paddingVertical": 10,
            "textAlign": "left",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "width": 130,
          }
        }
        testID="forgotPasswordButton"
        text="Forgot Password?"
        type="transparent"
      />
    </View>
  </Flex>
  <View
    forwardedRef={[Function]}
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginHorizontal": 38,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Button
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 24,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
              "margin": 4,
              "width": "100%",
            },
            Object {
              "backgroundColor": "white",
              "borderColor": undefined,
              "borderWidth": undefined,
            },
          ]
        }
        testID="socialAuthButton"
      >
        <View
          style={
            Object {
              "width": 70,
            }
          }
        >
          <SvgMock />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          Sign in with Google
        </Text>
      </Button>
      <Button
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 24,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
              "margin": 4,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#3B5998",
              "borderColor": undefined,
              "borderWidth": undefined,
            },
          ]
        }
        testID="socialAuthButton"
      >
        <View
          style={
            Object {
              "width": 70,
            }
          }
        >
          <SvgMock />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          Sign in with Facebook
        </Text>
      </Button>
    </View>
  </View>
</View>
`;

exports[`renders correctly for forced logout 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <View
    forwardedRef={[Function]}
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FF5532",
        "height": 68,
        "justifyContent": "center",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      There was a problem signing in.
    </Text>
  </View>
  <Header
    left={null}
  />
  <Flex
    align="center"
    justify="center"
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 24,
          "fontStyle": "normal",
          "lineHeight": 32,
          "paddingLeft": 30,
          "paddingRight": 80,
          "textAlign": "left",
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      It's been a while since you've signed in.
Please sign in so we know it's you.
    </Text>
  </Flex>
  <Flex
    style={
      Object {
        "paddingHorizontal": 30,
        "paddingVertical": 10,
      }
    }
    value={2}
  >
    <View>
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Email
      </Text>
      <Input
        autoCapitalize="none"
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="white"
        returnKeyType="next"
        testID="emailInput"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Password
      </Text>
      <Input
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="white"
        returnKeyType="done"
        secureTextEntry={true}
        testID="passwordInput"
        value=""
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "paddingVertical": 10,
            "textAlign": "left",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "width": 130,
          }
        }
        testID="forgotPasswordButton"
        text="Forgot Password?"
        type="transparent"
      />
    </View>
  </Flex>
  <View
    forwardedRef={[Function]}
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginHorizontal": 38,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Button
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 24,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
              "margin": 4,
              "width": "100%",
            },
            Object {
              "backgroundColor": "white",
              "borderColor": undefined,
              "borderWidth": undefined,
            },
          ]
        }
        testID="socialAuthButton"
      >
        <View
          style={
            Object {
              "width": 70,
            }
          }
        >
          <SvgMock />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          Sign in with Google
        </Text>
      </Button>
      <Button
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 24,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
              "margin": 4,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#3B5998",
              "borderColor": undefined,
              "borderWidth": undefined,
            },
          ]
        }
        testID="socialAuthButton"
      >
        <View
          style={
            Object {
              "width": 70,
            }
          }
        >
          <SvgMock />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          Sign in with Facebook
        </Text>
      </Button>
    </View>
  </View>
</View>
`;
